Parse suppressions